# Ram-Most-Trusted-Trade-App

./: .env.example  .gitignore  Cargo.toml  IMPROVEMENT_PLAN_2026-07-02.md  PRODUCT_ROADMAP.md  RAM_ISTP_User_Guide.docx  SESSION_HANDOVER.md  UPGRADE_PLAN.md  build_fundamentals.py  download_stock.py  enrich_stock.py  serve_dashboard.py
.claude/: launch.json  settings.json
data/journals/: journal_2026.duckdb.wal
src/: analytics_kernel.rs  basket_risk.rs  cache.rs  calibration.rs  capital_planner.rs  circuit_breaker.rs  config.rs  cost_floor.rs  costs.rs  cpcv.rs  data_quality.rs  data_refresh.rs  execution_staging.rs  exit_guard.rs  fundamentals.rs  holdings_analytics.rs  ingestion_engine.rs  journal_import.rs  journal_sync.rs  kite_auth.rs  kite_instruments.rs  kite_quote.rs  main.rs  market_regime.rs  news_engine.rs  news_signal.rs  picks.rs  pivots.rs  portfolio_analytics.rs  portfolio_import.rs  portfolio_rotation.rs  regime.rs  risk_manager.rs  sector_momentum.rs  server.rs  session_governor.rs  stats.rs  storage_kernel.rs  strategy_engine.rs  style_validation.rs  (+7 more)
ui/: add_stock.html  data.html  desk.html  index.html  intraday.html  journal.html  kite.html  live_integration.html  live_trade_plan.html  picks.html  portfolio.html
