[package]
name = "ram_istp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
axum = { version = "0.8.9", features = ["ws"] }
byteorder = "1.5.0"
chrono = { version = "0.4.45", features = ["serde"] }
chrono-tz = "0.10.4"
crossbeam-channel = "0.5.15"
dotenvy = "0.15.7"
duckdb = { version = "1.10504.0", features = ["bundled"] }
futures-util = "0.3.32"
# NOTE: polars was dropped — polars-lazy 0.54.4 has a hard dependency on
# polars-stream 0.54.4, which fails to compile upstream (references
# IRFunctionExpr::StringExpr / IRStringFunction that no longer exist). We don't
# need it: DuckDB handles all out-of-core/parquet work, and live per-symbol
# 1000-tick windows are plain Rust ring buffers (VecDeque) — faster and matches
# the "lock-free ring buffer / native structures" design goal.
rayon = "1.12.0"
reqwest = { version = "0.13.4", features = ["json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-tungstenite = "0.29.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
