[package]
name = "ram_istp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
axum = { version = "0.8.9", features = ["ws", "multipart"] }
byteorder = "1.5.0"
# Portfolio file upload: Excel (.xlsx/.xls) parsing + best-effort PDF text extraction.
# Both pure-Rust; CSV reuses the existing `csv` crate. Used only by the upload path
# (display-only ingest of the user's own holdings — never an order).
calamine = "0.26"
pdf-extract = "0.7"
chrono = { version = "0.4.45", features = ["serde"] }
chrono-tz = "0.10.4"
crossbeam-channel = "0.5.15"
dotenvy = "0.15.7"
duckdb = { version = "1.10504.0", features = ["bundled"] }
futures-util = "0.3.32"
# NOTE: polars was dropped — polars-lazy 0.54.4 has a hard dependency on
# polars-stream 0.54.4, which fails to compile upstream (references
# IRFunctionExpr::StringExpr / IRStringFunction that no longer exist). We don't
# need it: DuckDB handles all out-of-core/parquet work, and live per-symbol
# 1000-tick windows are plain Rust ring buffers (VecDeque) — faster and matches
# the "lock-free ring buffer / native structures" design goal.
csv = "1.3.1"
rayon = "1.12.0"
reqwest = { version = "0.13.4", features = ["json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
# native-tls so the live Kite feed can establish `wss://ws.kite.trade` (the sync
# `tungstenite::connect` we use needs a TLS feature; without it, connect fails
# with "TLS support not compiled in"). Uses the macOS system trust store.
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
